Fix: landing background image path

--- a/Kasper Template Two/css/kasper.css
+++ b/Kasper Template Two/css/kasper.css
@@ -211,7 +211,7 @@ header nav .form i {
 /* End Header */
 /* Landing */
 .landing {
-  background-image: url("/images/landing.jpg");
+  background-image: url("../images/landing.jpg");
   background-size: cover;
   min-height: 100vh;
   position: relative;
